2006-05-29  Mo DeJong  <mdejong@users.sourceforge.net>

        Comment out debug statements. This generates
        less code in a compiled tjc.jar.

        * src/tjc/tjc/library/compileproc.tcl:
        * src/tjc/tjc/library/descend.tcl:
        * src/tjc/tjc/library/parse.tcl:

2006-05-29  Mo DeJong  <mdejong@users.sourceforge.net>

        * tests/tclbench/compare.tcl: Add script that
        is used to process the output of tclbench
        and convert it to a CSV file that can easily
        be imported into a spreadsheet.

2006-05-27  Mo DeJong  <mdejong@users.sourceforge.net>

        * src/tjc/tjc/library/compileproc.tcl: Add support
        for +inline-expr flag. Implement inlined logic
        in compileproc_expr_evaluate_emit_binary_operator
        for the eq and ne expr operators.
        * src/tjc/tjc/library/module.tcl: Add support
        for +inline-expr flag.
        * tests/tclbench/expr.bench: Add tests for
        specific inlined operations.
        * tests/tjc/compileproc_2.test:
        * tests/tjc/compileproc_9.test: Add test cases
        for inlined unary and binary operators.
        * tests/tjc/module.test: Add +inline-expr tests.

2006-05-26  Mo DeJong  <mdejong@users.sourceforge.net>

        * src/jacl/tcl/lang/ExprValue.java: Add
        a series of inlined math operations.
        These methods will be inlined in the
        Expression.evalBinaryOperator() method.
        * src/jacl/tcl/lang/Expression.java
        (evalBinaryOperator): Add implementation
        of math operators that makes use of inlined
        methods in the ExprValue. This implementation
        executes slightly faster than the previous
        implementation. Also move STREQ and STRNEQ
        operators into first switch since no operand
        validation is needed for these operators.
        * src/tjc/tcl/lang/TJC.java (exprBinaryOperator,
        exprUnaryOperator): Make arguments final.

2006-05-25  Mo DeJong  <mdejong@users.sourceforge.net>
